--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1 style="padding-top: 200px;">Добро пожаловать на сайт theOxlice!</h1>
             <h4>Вы здесь можете <a href="#download">СКАЧАТЬ</a> не только мои игры, но и загрузить <a href="https://forms.gle/4yAD45AqYA5cKp99A" target="_blank" style="font-weight: bolder;">ВАШИ</a></h4>
             <a href="https://forms.gle/4yAD45AqYA5cKp99A" target="_blank" class="btn">Загрузить свою игру</a>
-            <a href="#download" class="btn">Скачать мои игры</a>
+            <br><br><br><br><center><a href="#download" class="btn">Скачать мои игры</a></center>
         </div>
 
         <center><a name="download"><h1>Скачать</h1></a></center>
