--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li class="center"><a href="#download">Скачать</a></li>
                 <li class="center"><a href="#about-site">О сайте</a></li>
                 <li class="center"><a href="#about-creator">О создателе</a></li>
+                <li><a href="test/test.html">Test</a></li>
             </ul>
             <input type="checkbox" class="switchMode" id="switchMode" />
             <label class="label" for="switchMode">
