--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             <ul>
                 <li class="center"><a href="#">Добро пожаловать!</a></li>
                 <li class="center"><a href="#download">Скачать</a></li>
-                <li class="center"><a href="#about-site">О сайте</a></li>
-                <li class="center"><a href="#about-creator">О создателе</a></li>
+                <li class="center"><a href="#user-game">Загрузить свою игру</a></li>
+                <li class="center"><a href="#about-site-and-creator">О сайте и обо мне</a></li>
+                <li class="center"><a href="#contact-me">Обратная связь</a></li>
             </ul>
             <input type="checkbox" class="switchMode" id="switchMode" />
             <label class="label" for="switchMode">
@@ -37,13 +38,14 @@
     <main>
         <div class="welcome">
             <h1 style="padding-top: 200px;">Добро пожаловать на сайт theOxlice!</h1>
-            <h4>Вы здесь можете <a href="#download">СКАЧАТЬ</a> не только мои игры, но и загрузить <a href="https://forms.gle/4yAD45AqYA5cKp99A" target="_blank" style="font-weight: bolder;">ВАШИ</a></h4>
-            <a href="https://forms.gle/4yAD45AqYA5cKp99A" target="_blank" class="btn">Загрузить свою игру</a>
-            <br><br><br><br><center><a href="#download" class="btn">Скачать мои игры</a></center>
+            <h4>Вы здесь можете <a href="#download"><i><b>СКАЧАТЬ</b></i></a> не только мои игры, но и <div style="margin-top: 10px;"><a href="https://forms.gle/4yAD45AqYA5cKp99A" target="_blank" style="font-weight: bolder;"><i><b>ЗАГРУЗИТЬ</b></i></a> Ваши</div></h4>
+            <a href="#download" class="btn">Скачать мои игры</a>
+            <br><br><br><br><center><a href="https://forms.gle/4yAD45AqYA5cKp99A" target="_blank" class="btn">Загрузить свою игру</a></center>
         </div>
 
-        <center><a name="download"><h1>Скачать</h1></a></center>
-        <div class="download" style="display: flex; padding-bottom: 50px; padding-top: 40px;">
+        <a name="download"></a>
+        <center><h1 class="download-text">Скачать</h1></center>
+        <div class="download" style="display: flex; padding-bottom: 85px; padding-top: 40px;">
             <div class="slideshow-container">
                 <div class="mySlides fade">
                     <img src="img/screens/guess_the_number_cpp/1.png" style="width:100%">
@@ -69,60 +71,71 @@
             </div>
         </div>
 
-        <div class="about-site" style="padding-bottom: 50px;">
-            <center><a name="about-site"><h1>О сайте</h1></a></center>
+        <a name="user-game"></a>
+        <div class="user-game" style="padding-bottom: 50px;">
+            <center><h1>Загрузить свою игру</h1></center>
+            <center>
+                <div class="box">
+                    <form id="ajax-contact-form" enctype="multipart/form-data" method="post">
+                        <div class="form-group">
+                            <label for="nameFF">Имя:</label>
+                            <input id="nameFF" name="nameFF" type="text" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="projectFF">Сообщение</label>
+                            <textarea id="projectFF" name="projectFF" cols="40" rows="3"></textarea>
+                        </div>
+                        <div class="control-file">
+                            <input id="fileFF" name="fileFF" type="file">
+                            <button id="upload-btn">Загрузить файл</button>
+                            <span id="upload-text"></span>
+                        </div>
+                        <button class="btn" type="submit" id="submitFF">Отправить сообщение</button>
+                    </form>
+                </div>
+            </center>
+        </div>
+
+        <div class="about-site-and-creator" style="padding-bottom: 50px;">
+            <center><a name="about-site-and-creator"><h1>О сайте и обо мне</h1></a></center>
             <div class="fragment" style="margin-top: 10px;">
-                <h5>Этот сайт создан 13-летним разработчиком из России Владом Елгиным, также известного (или пока неизвестного 😁) как theOxlice. Здесь вы можете скачать игры, которые он (или другие) сделали. Среди них: <b>Guess the Number (C++)</b>, <b>Guess the Number (C#)</b>, <b>Man and Crystals</b> и др. Сюда будут добавляться и другие будущие игры.</h5>
+                <h4>Этот сайт создан мной, 13-летним разработчиком из России Владом Елгиным, также известного (или пока неизвестного 😁) как theOxlice. Здесь вы можете скачать игры, которые я (или другие) сделали. Среди них: <b>Guess the Number (C++)</b>, <b>Guess the Number (C#)</b>, <b>Man and Crystals</b> и др. Сюда будут добавляться и другие будущие игры.
+                    <br><br>Родился я и проживаю в России, Йошкар-Оле. Моя дата рождения - 29.05.2009. Из этого можно понять, что мне на данный момент 13 лет.
+                    <br>Программированием я занялся где-то в 12 лет. В этом возрасте в Академии "Шаг" я начал изучать язык программирования Python. Из-за этого мне подарили книги по нему. Благодаря этой книге и маме, которая подарила мне её, я "определил" свою судьбу.
+                    <br>Первым языком программирования после Python'а стал С++. Однако, на нём у меня не получалось сделать адекватный русский язык (это потому что я прогал в Sublime Text). Поэтому я перешёл на С#.
+                    <br>На С# он сделал свою первую игру - Guess the Number (C#).
+                    <br>Вскоре мне друг посоветовал перейти прогать на Visual Studio. Может быть там будет адекватная "руссификация" на С++? Так и получилось! Поэтому я переписал Guess the Number. Так получилась Guess the Number (C++)
+                    <br>Вскоре я заинтересовался геймдевом. Я начал думать, где этим заниматься, в Unity, или в Unreal Engine 5. Unity-проект очень долго. Но UE5 сам скачивался долго. Поэтому я решил делать на Unity.
+                    <br>Вскоре я всё-таки решился уделить время на UE5. Он установился, проект запускался быстро. Но сам движок жёстко тупил!.
+                    <br>Вскоре я понял, что фиг мне, а не заниматься геймдевом. Надо сперва научиться.
+                    <br>Прошло время. В "Шаге" я начал изучать веб-разработку. И финальным проектом стал как-раз свой сайт. Так и появился сайт "theOxlice"
+                    <br>Как уже говорилось, без мамы, "Шага" и Даниила Николаева (его препода), этого сайта бы не было.</h4>
             </div>
         </div>
 
-        <div class="about-creator"  style="padding-bottom: 50px;">
-            <center><a name="about-creator"><h1>О создателе</h1></a></center>
-            <div class="fragment">
-                <h5>Разработчика этого сайт зовут Елгин Влад. Он также известени (или неизвестен?), как theOxlice.
-<br>Родился он и проживает в России, Йошкар-Оле. Его дата рождения - 29.05.2009. Из этого можно понять, что ему на данный момент 13 лет.
-<br>Программированием он занялся где-то в 12 лет. В этом возрасте в Академии "Шаг" он начал изучать язык программирования Python. Из-за этого ему подарили книги по нему. Благодаря этой книге и маме, которая подарила Владу её, он "определил" свою судьбу.
-<br>Первым языком программирования после Python'а стал С++. Однако, на нём у Влада не получалось сделать адекватный русский язык (это потому что он прогал в Sublime Text). Поэтому он перешёл на С#.
-<br>На С# он сделал свою первую игру - Guess the Number (C#).
-<br>Вскоре ему друг посоветовал перейти прогать на Visual Studio. Может быть там будет адекватная "руссификация" на С++? Так и получилось! Поэтому он переписал Guess the Number. Так получилась Guess the Number (C++)
-<br>Вскоре он заинтересовался геймдевом. Он начал думать, где этим заниматься, в Unity, или в Unreal Engine 5. Unity-проект очень долго. Но UE5 сам скачивался долго. Поэтому он решил делать на Unity.
-<br>Вскоре Влад всё-таки решился уделить время на UE5. Он установился, проект запусался быстро. Но сам движок жёстко тупил!.
-<br>Вскоре он понял, что фиг ему, а не заниматься геймдевом. Надо сперва научиться.
-<br>Прошло время. В "Шаге" он начал изучать веб-разработку. И финальным проектом стал как-раз свой сайт. Так и появился сайт "theOxlice"
-<br>Как уже говорилось, без мамы, "Шага" и Даниила Николаева (его препода), этого сайта бы не было.</h5>
+        <div class="contact-me" style="padding-bottom: 25px;">
+            <center><a name="contact-me"><h1>Обратная связь</h1></a></center>
+            <div class="fragment" style="margin-top: 10px;">
+                <h4>Если Вы хотите, чтобы Ваши игры появиись здесь, пройдите <a href="https://forms.gle/4yAD45AqYA5cKp99A" target="_blank"><i><b>ЭТУ</b></i></a> форму. Также можно задонатить денюжку на <a href="https://www.donationalerts.com/r/theoxlice" target="_blank"><b><i>Donation Alerts</i></b></a>, если Вам не жалко :)
+                <br>Email: <a href="mailto:vladelgin7@gmail.com" target="_blank"><i><b>vladelgin7@gmail.com</b></i></a>
+                <br>Telegram: <a href="https://t.me/theOxlice" target="_blank"><i><b>@theOxlice</b></i></a></h4>
             </div>
         </div>
-
     </main>
     
     <!--FOTER-->
     <footer>
-        <div>
-            <div>
-                <div class="columns">
-                    <div class="footer-column">
-                        <h3>О сайте</h3>
-                        <p> Этот сайт создан 13-летним разработчиком из России Владом Елгином, также известного (или неизвестного?) как theOxlice. Здесь вы можете скачать игры, которые он (или другие) сделали. Среди них: <b>Guess the Number (C++)</b>, <b>Guess the Number (C#)</b>, <b>Man and Crystals</b> и др. Сюда будут добавляться и другие будущие игры.</p>
-                    </div>
-                    <div class="footer-column">
-                        <h3>Связаться со мной</h3>
-                        <p> Если Вы хотите, чтобы Ваши игры появиись здесь, пройдите <a href="https://forms.gle/4yAD45AqYA5cKp99A" target="_blank"><b>ЭТУ</b></a> форму. Также можно задонатить денюжку на <a href="https://www.donationalerts.com/r/theoxlice" target="_blank"><b>Donation Alerts</b></a>, если Вам не жалко :)
-                        <br>
-                        <strong> Email:
-                            vladelgin7@gmail.com
-                        </strong>
-                        </p>
-                    </div>
-                </div>
-            </div>
+        <div >
             <center>
-                <small> © 2022 theOxlice
-                </small>
+                © 2022 theOxlice
             </center>
         </div>  
     </footer>
 
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/themes.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/send.js"></script>
+    <script type="text/javascript" src="js/load-file.js"></script>
 
 </body>
