--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             <ul>
                 <li class="center"><a href="#">Добро пожаловать!</a></li>
                 <li class="center"><a href="#download">Скачать</a></li>
-                <li class="center"><a href="#user-game">Загрузить свою игру</a></li>
                 <li class="center"><a href="#about-site-and-creator">О сайте и обо мне</a></li>
                 <li class="center"><a href="#contact-me">Обратная связь</a></li>
             </ul>
@@ -64,36 +63,18 @@
                     <div class="text">Man and Crystals</div>
                     <center><a class="btn" href="downloads/man_and_crystals/setup.exe" download="">Скачать!</a></center>
                 </div>
+
+                <div class="mySlides fade">
+                    <img src="img/screens/ghoul/1.png" style="width: 100%;">
+                    <div class="text">Ghoul</div>
+                    <center><a class="btn" href="downloads/ghoul/ghoul.exe" download="">Скачать!</a></center>
+                </div>
+
                 
                 <a class="prev" onclick="plusSlides(-1)">❮</a>
                 <a class="next" onclick="plusSlides(1)">❯</a>
                 
             </div>
-        </div>
-
-        <a name="user-game"></a>
-        <div class="user-game" style="padding-bottom: 50px;">
-            <center><h1>Загрузить свою игру</h1></center>
-            <center>
-                <div class="box">
-                    <form id="ajax-contact-form" enctype="multipart/form-data" method="post">
-                        <div class="form-group">
-                            <label for="nameFF">Имя:</label>
-                            <input id="nameFF" name="nameFF" type="text" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="projectFF">Сообщение</label>
-                            <textarea id="projectFF" name="projectFF" cols="40" rows="3"></textarea>
-                        </div>
-                        <div class="control-file">
-                            <input id="fileFF" name="fileFF" type="file">
-                            <button id="upload-btn">Загрузить файл</button>
-                            <span id="upload-text"></span>
-                        </div>
-                        <button class="btn" type="submit" id="submitFF">Отправить сообщение</button>
-                    </form>
-                </div>
-            </center>
         </div>
 
         <div class="about-site-and-creator" style="padding-bottom: 50px;">
